tests/Compilation/positive/test066/M.juvix
module M;

import Stdlib.Prelude open;
import N open;

main : Nat := f;
