tests/Compilation/negative/test015.juvix
-- Using `todo`
module test015;

import Stdlib.Prelude open;

main : Nat := todo;
